[project]
name = "nano-tools"
version = "0.1.0"
description = "Tools builded with agent for daily usage"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.57.0",
    "pypandoc>=1.16.2",
    "html2text>=2020.1.16",
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
]
